@@ -1,3 +1,8 @@
+Summary of important user-visible changes for netcdf 1.0.5:
+-------------------------------------------------------------------
+
+ ** Implement DeflateLevel in nccreate
+
 Summary of important user-visible changes for netcdf 1.0.4:
 -------------------------------------------------------------------
 
